2002-01-29  Ulrich Drepper  <drepper@redhat.com>

	* manual/signal.texi (Process Signal Mask): Document that
	pthread_sigmask, not sigprocmask, must be used in MT programs.
	Patch by Bertold Kolics <Bertold.Kolics@Sun.COM>.

	* misc/hsearch_r.c (hsearch_r): Don't insert anything if entry is
	found.
	* misc/Makefile (tests): Add tst-hsearch.
	* misc/tst-hsearch.c: New file.

2002-01-18  Wolfram Gloger  <wg@malloc.de>

	* malloc/malloc.c: Rewrite, adapted from Doug Lea's malloc-2.7.0.c.
	* malloc/malloc.h: Likewise.
	* malloc/arena.c: New file.
	* malloc/hooks.c: New file.
	* malloc/tst-mallocstate.c: New file.
	* malloc/Makefile: Add new testcase tst-mallocstate.
	Add arena.c and hooks.c to distribute.  Fix commented CPPFLAGS.

2002-01-28  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/msort.c: Remove last patch.  The optimization violates the
	same rule which qsort.c had problems with.

2002-01-27  Paul Eggert  <eggert@twinsun.com>

	* stdlib/qsort.c (_quicksort): Do not apply the comparison function
	to a pivot element that lies outside the array to be sorted, as
	ISO C99 requires that the comparison function be called only with
	addresses of array elements [PR libc/2880].

2002-01-28  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object): Remove incorrect optimization
	for SHARED code.  Reported by Ben Collins <bcollins@debian.org>.

	* timezone/asia: Update from tzdata2002b.
	* timezone/australasia: Likewise.
	* timezone/backward: Likewise.
	* timezone/europe: Likewise.
	* timezone/leapseconds: Likewise.
	* timezone/iso3166.tab: Likewise.
	* timezone/zone.tab: Likewise.

2002-01-23  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/Makefile (pic-ccflag): New variable.

2002-01-28  Ulrich Drepper  <drepper@redhat.com>

	* string/strxfrm.c: Allocate one more byte for rulearr and clear
	this element [PR libc/2855].

	* string/strcoll.c: Handle zero-length arguments specially
	[PR libc/2856].

2002-01-23  Jakub Jelinek  <jakub@redhat.com>
