@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2002-1-7
+GNU C Library NEWS -- history of user-visible changes.  2002-1-28
 Copyright (C) 1992-2000, 2001, 2002 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -21,6 +21,9 @@ Version 2.3
 
 * Read-only stdio streams now use mmap to speed up operation but eliminating
   copying and buffer underflows.  Implemented by Ulrich Drepper.
+
+* The malloc functions were completely rewritten by Wolfram Gloger based
+  on Doug Lea's malloc-2.7.0.c.
 
 Version 2.2.5
 
